Tue Apr 13 11:35:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer_Task.cpp:
        * ciao/ComponentServer/CIAO_RTComponentServer_Task.cpp:
          When we get a CORBA exception, print its details in the log

Tue Apr 13 10:59:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/ComponentServer/CIAO_ServerActivator_Impl.cpp:
          Layout change

        * ccm/CCM_Session2Context.idl:
          Disable for LwCCM

Tue Apr 13 10:06:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/Servants/Connector_Servant_Impl_Base.h:
          Removed the receptacle administration, if the user
          component has receptacles, than tao_idl already generates code
          to get all of these and that code also uses the context

Tue Apr 13 08:53:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL3/ImpliedIDL/All/convert.idl:
          Disabled some parts for LwCCM

Tue Apr 13 07:03:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.h
        * ciao/Servants/Servant_Impl_Base.h
          Enabled some types for LwCCM

Mon Apr 12 18:39:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp
        * ciao/Servants/Connector_Servant_Impl_Base.h
        * ciao/Servants/Home_Servant_Impl_Base.cpp
        * ciao/Servants/Home_Servant_Impl_Base.h
          Disabled some more code with LwCCM

Mon Apr 12 18:29:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp (remove):
          Reworked to work with LwCCM

Mon Apr 12 18:15:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.cpp:
        * ciao/Servants/Servant_Impl_Base.h: